<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity">

    <item android:id="@+id/action_chat"
        android:title="chat"
        android:icon="@drawable/ic_message"
        app:showAsAction="always"
        />
    <item android:id="@+id/action_follow"
        android:title="Follow"
        android:icon="@drawable/ic_follow"
        app:showAsAction="always"
        />
    <item android:id="@+id/action_search"
        android:title="Search"
        android:icon="@drawable/ic_search_24dp"
        app:showAsAction="always"
        />
</menu>
