<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame_layout_view_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:visibility="gone"
        android:scrollbars="vertical"
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null">
    </ListView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listConversation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



    <ViewStub
        android:id="@+id/stub_text_view"
        android:inflatedId="@+id/text_no_result"
        android:layout="@layout/inflate_text_view_no_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>
